--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<html><head>
+<html>
+  <head>
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
     <!-- "Main section" -->
-    <h1>Discover hidden places in the world around you!</h1>
+    <h1>Discover hidden places in the world around you</h1>
 
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
 
-    <video autoplay="" muted="" loop="">
+    <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
 
@@ -27,9 +28,8 @@
 
     <!-- "Footer" -->
     <div class="footer">
-      <p>© Excursion</p>
+      <p>&copy; Excursion</p>
     </div>
 
-  
-</body></html>
-
+  </body>
+</html>
